<project xmlns="http://maven.apache.org/POM/4.0.0" 
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.terministic</groupId>
  <artifactId>de.terministic.fabsim</artifactId>
  <version>0.0.2-SNAPSHOT</version>

  
   <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>-Xmx20024m</argLine>            
               <!--  <groups>fast</groups> -->
                <excludedGroups>slow</excludedGroups>
            </configuration>
            </plugin>
            
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-math3</artifactId>
  		<version>3.6.1</version>
  	</dependency>
<dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-api</artifactId>
	<version>1.7.32</version>
	</dependency>
<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.5.2</version>
</dependency>
<dependency>
    	<groupId>org.apache.maven.surefire</groupId>
    	<artifactId>maven-surefire-common</artifactId>
    	<version>3.0.0-M4</version>
    </dependency>
  </dependencies>
</project>
